--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -9,11 +9,13 @@
     "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
-  "author": "Aaro Lahtinen",
+  "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "mongoose": "^8.16.1",
     "morgan": "^1.10.0"
   }
 }
